--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
             </div>
             
-            
+             <div class="carousel-item">
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
