--- a/contact.html
+++ b/contact.html
@@ -174,6 +174,7 @@
       </ul>
     
       <p class="text-center text-muted">© 2023 Mk pizza</p>
+       <p class="text-center text-muted"> Create by <a href="https://www.instagram.com/_mr_m.k1608/" style="text-decoration: none;"> Manan Kolate</p></a>
     </footer>
   </div>
     </div>
