--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
                   </div>
                 </div>
                 <div class="col-12">
-                  <button type="submit" class="btn btn-dark container">Sign in</button>
+                  <button type="submit" class="btn btn-dark container">Sign up</button>
                 </div>
               </form>
         </div>
