--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
     <form>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter email" required>
       </div>
      
         <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
