--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
         <div class="modal-body">
             <form class="row g-3">
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                    <input type="email" class="form-control" id="floatingInput" placeholder="Enter email" required>
                     <label for="floatingInput">Email address</label>
                   </div>
                   <div class="form-floating">
@@ -83,7 +83,7 @@
                   </div>
                 <div class="col-12">
                   <label for="inputAddress" class="form-label">Address</label>
-                  <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                  <input type="text" class="form-control" id="inputAddress" placeholder="enter Address">
                 </div>
                
                 <div class="col-12">
@@ -116,7 +116,7 @@
         </div>
         <div class="modal-body">
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                <input type="email" class="form-control" id="floatingInput" placeholder="Enter email" required>
                 <label for="floatingInput">Email address</label>
               </div>
               <div class="form-floating">
